--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -24,7 +24,7 @@ body:
   - type: dropdown
     id: image_kind
     attributes:
-      label: Image kind(FOSS/NSS)
+      label: Image kind
       options:
         - FOSS
         - NSS
