--- a/.github/workflows/nss_24.10.0-release.yml
+++ b/.github/workflows/nss_24.10.0-release.yml
@@ -1,4 +1,4 @@
-name: build nss 24.10
+name: build nss 24.10.0 release
 on:
   workflow_dispatch:
       
@@ -7,7 +7,7 @@ jobs:
     permissions:
       contents: write
     uses:
-      arix00/openwrt-mx4300/.github/workflows/_image_builder.yml@build      
+      arix00/openwrt-mx4300/.github/workflows/_image_builder.yml@build
     with:
       build_settings: 
         '{"SOURCE_REPO":  "https://github.com/openwrt/openwrt.git", 
@@ -16,7 +16,7 @@ jobs:
         "BUILD_BRANCH": "build",
         "BUILD_INIT": "init_build.sh",
         "BUILD_TYPE":  "nss",
-        "BUILD_VER": "24.10-SNAPSHOT",
-        "BUILD_TAG": "",
-        "BUILD_SYNC": "n",        
+        "BUILD_VER": "24.10.0",
+        "BUILD_TAG": "1fad1b4",
+        "BUILD_SYNC": "y",
         "BUILD_KMOD": "y"}'
