--- a/.github/workflows/foss_24.10-snapshot.yml
+++ b/.github/workflows/foss_24.10-snapshot.yml
@@ -1,13 +1,14 @@
-name: build nss 24.10.0-rc7
+name: build foss 24.10 snapshot
 on:
   workflow_dispatch:
-      
+  workflow_call:
+
 jobs:
-  call-image-builder-nss-24_10:
+  call-image-builder-foss-24_10:
     permissions:
       contents: write
     uses:
-      arix00/openwrt-mx4300/.github/workflows/_image_builder.yml@build
+      arix00/openwrt-mx4300/.github/workflows/_image_builder.yml@build      
     with:
       build_settings: 
         '{"SOURCE_REPO":  "https://github.com/openwrt/openwrt.git", 
@@ -15,8 +16,8 @@ jobs:
         "BUILD_REPO":    "https://github.com/${{github.repository}}.git",
         "BUILD_BRANCH": "build",
         "BUILD_INIT": "init_build.sh",
-        "BUILD_TYPE":  "nss",
-        "BUILD_VER": "24.10.0-rc7",
-        "BUILD_TAG": "6cbfbb1",
+        "BUILD_TYPE":  "foss",
+        "BUILD_VER": "24.10-SNAPSHOT",
+        "BUILD_TAG": "",
         "BUILD_SYNC": "y",
-        "BUILD_KMOD": "y"}'
+        "BUILD_KMOD": "y"}'        
