--- a/.github/workflows/nss_24.10-snapshot.yml
+++ b/.github/workflows/nss_24.10-snapshot.yml
@@ -1,10 +1,9 @@
-name: build foss 24.10
+name: build nss 24.10 snapshot
 on:
   workflow_dispatch:
-  workflow_call:
-
+      
 jobs:
-  call-image-builder-foss-24_10:
+  call-image-builder-nss-24_10:
     permissions:
       contents: write
     uses:
@@ -16,8 +15,8 @@ jobs:
         "BUILD_REPO":    "https://github.com/${{github.repository}}.git",
         "BUILD_BRANCH": "build",
         "BUILD_INIT": "init_build.sh",
-        "BUILD_TYPE":  "foss",
+        "BUILD_TYPE":  "nss",
         "BUILD_VER": "24.10-SNAPSHOT",
         "BUILD_TAG": "",
-        "BUILD_SYNC": "y",
-        "BUILD_KMOD": "y"}'        
+        "BUILD_SYNC": "n",        
+        "BUILD_KMOD": "y"}'
